[update]add archieve

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -125,3 +125,21 @@
 
 
 }
+
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
+
+  .writingMode-vertical-lr {
+    writing-mode: vertical-lr;
+  }
+
+  .writingMode-vertical-rl {
+    writing-mode: vertical-rl;
+  }
+
+  .writingMode-horizontal-tb {
+    writing-mode: horizontal-tb;
+  }
+}
