components of about page

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -3,13 +3,21 @@
 @tailwind utilities;
 
 @layer base {
-
   * {
     box-sizing: border-box;
   }
 
   div {
     white-space: pre-wrap;
+    word-break: keep-all;
+  }
+
+  :lang(ko) {
+    letter-spacing: -0.02em;
+  }
+
+  :lang(en) {
+    letter-spacing: 0;
   }
 
   :root {
@@ -58,7 +66,6 @@
     /* 16px */
     background: #fff;
     font-size: 100%;
-
   }
 
   /* ( 크롬, 사파리, 오페라, 엣지 ) 동작 */
@@ -122,8 +129,6 @@
     background: #555;
     /* 스크롤바 호버 색상 */
   }
-
-
 }
 
 @layer utilities {
